Bug 11945 - ctdb does not get out of banned state any more when failed internal interface comes back up
Summary: ctdb does not get out of banned state any more when failed internal interface...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Clustering (show other bugs)
Version: 4.4.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-01 09:37 UTC by Michael Adam
Modified: 2016-06-15 09:30 UTC (History)
5 users (show)

See Also:


Attachments
patch for master that is in autobuild currently (2.54 KB, patch)
2016-06-01 09:50 UTC, Michael Adam
no flags Details
patch for v4-4-test, cherry-picked from master (2.77 KB, patch)
2016-06-06 15:23 UTC, Michael Adam
obnox: review+
gd: review+
obnox: review? (amitay)
jarrpa: review+
martins: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Adam 2016-06-01 09:37:05 UTC
When a node has set RECOVERY_ACTIVE, e.g. by triggering
an election, and then banned itself (or got banned), then
the databases won't be freezing, and hence the node will
remain in banned state indefinitely even if the reason for
banning has been fixed.

This can for instance happen if a node-internal interface
is brought down on a non-recmaster node.

Only a ctdb restart can fix this situation.
    
This is a regression from 4.3, introduced with
    
b4357a79d916b1f8ade8fa78563fbef0ce670aa9
    
and
    
d8f3b490bbb691c9916eed0df5b980c1aef23c85
Comment 1 Michael Adam 2016-06-01 09:50:20 UTC
Created attachment 12157 [details]
patch for master that is in autobuild currently

This patch has come out of the discussion between Amitay, Martin and me and is currently in autobuild.
Comment 2 Michael Adam 2016-06-06 15:23:49 UTC
Created attachment 12162 [details]
patch for v4-4-test, cherry-picked from master

Patch for 4.4, cherry-picked with one minor context-resolution from master.
Comment 3 José A. Rivera 2016-06-06 15:30:57 UTC
Comment on attachment 12162 [details]
patch for v4-4-test, cherry-picked from master

LGTM!
Comment 4 José A. Rivera 2016-06-06 15:32:16 UTC
Karolin, all yours. :)
Comment 5 Guenther Deschner 2016-06-06 16:46:34 UTC
Comment on attachment 12162 [details]
patch for v4-4-test, cherry-picked from master

LGTM
Comment 6 Karolin Seeger 2016-06-09 10:52:33 UTC
(In reply to Guenther Deschner from comment #5)
Pushed to autobuild-v4-4-test.
Comment 7 Karolin Seeger 2016-06-15 09:30:27 UTC
(In reply to Karolin Seeger from comment #6)
Pushed to v4-4-test.
Closing out bug report.

Thanks!